openadaptor3 production 3.x Release Notes

See licence.txt for Licence information.
=================================================

Date: ???
Author: openadaptor Core Team

openadaptor 3.x
=======

Connectors
==========

 * (SC93) review CXF Web service read connector (ongoing). CXF read connector
   separated from (now deprecated) XFire read connector. Type of the serviceName
   property in WebServiceCXFReadConnector changed to QName.

   |---------------------------------------------------------------------------------|
   |         OA 3.4.4                   |             OA 3.?                         |    
   |---------------------------------------------------------------------------------|
   |                                    |                                            |
   | WebServiceCXFReadConnector         | WebServiceCXFReadConnector                 |  
   | #serviceName is a String.          | #serviceName is a QName.                   |
   |                                    | Changes required as per example: example/  |
   |                                    | spring/connectors/soap/ws-cxf-reader.xml   |
   |                                    |                                            |
   |---------------------------------------------------------------------------------|

Processors
==========

Examples
========
 
 * Registration server (example\spring\register\oa-register-server.xml) now 
   based on CXF instead of XFire.  
   
 * (SC93) example/spring/connectors/soap/ws-cxf-reader.xml - type of serviceName
   property changed to QName.

Miscellaneous
=============

 * (SC94) Resetting exitCode in ReadNode (affects use with AdaptorRunConfiguration).  

Bug Fixes
=========

3rd Party
=========

 * Upgraded: lib/cxf_2.1.jar to 2.2.3
             lib/XmlSchema_1.4.2.jar to 1.4.5 (CXF related)
             lib/FastInfoset_1.2.2 to 1.2.7 (CXF related)
             lib/jaxb-impl_2.1.6.jar to 2.1.12 (CXF related)